--- a/config/eventing.yaml
+++ b/config/eventing.yaml
@@ -73,3 +73,16 @@ repositories:
     namespace: openshift
   repo: eventing
   slackChannel: '#knative-eventing-ci'
+  owners:
+    reviewers:
+      - aliok
+      - creydr
+      - lberk
+      - matzew
+      - Cali0707
+    approvers:
+      - aliok
+      - creydr
+      - lberk
+      - matzew
+      - Cali0707
