--- a/config/eventing-hyperfoil-benchmark.yaml
+++ b/config/eventing-hyperfoil-benchmark.yaml
@@ -16,3 +16,16 @@ repositories:
   promotion: {}
   repo: eventing-hyperfoil-benchmark
   slackChannel: '#knative-eventing-ci'
+  owners:
+    reviewers:
+      - aliok
+      - creydr
+      - lberk
+      - matzew
+      - Cali0707
+    approvers:
+      - aliok
+      - creydr
+      - lberk
+      - matzew
+      - Cali0707
