--- a/config/eventing-integrations.yaml
+++ b/config/eventing-integrations.yaml
@@ -103,3 +103,16 @@ repositories:
     namespace: openshift
   repo: eventing-integrations
   slackChannel: '#knative-eventing-ci'
+  owners:
+    reviewers:
+      - aliok
+      - creydr
+      - lberk
+      - matzew
+      - Cali0707
+    approvers:
+      - aliok
+      - creydr
+      - lberk
+      - matzew
+      - Cali0707
