--- a/config/eventing-istio.yaml
+++ b/config/eventing-istio.yaml
@@ -67,3 +67,16 @@ repositories:
     namespace: openshift
   repo: eventing-istio
   slackChannel: '#knative-eventing-ci'
+  owners:
+    reviewers:
+      - aliok
+      - creydr
+      - lberk
+      - matzew
+      - Cali0707
+    approvers:
+      - aliok
+      - creydr
+      - lberk
+      - matzew
+      - Cali0707
