--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -654,3 +654,19 @@ repositories:
         cpu: 100m
         memory: 200Mi
   slackChannel: '#serverless-ci'
+  owners:
+    reviewers:
+      - aliok
+      - creydr
+      - dsimansk
+      - matzew
+      - Kaustubh-pande
+    approvers:
+      - aliok
+      - creydr
+      - dsimansk
+      - lberk
+      - matzew
+      - openshift-cherrypick-robot
+      - Kaustubh-pande
+      - maschmid
