--- a/config/serving-net-istio.yaml
+++ b/config/serving-net-istio.yaml
@@ -47,3 +47,12 @@ repositories:
     namespace: openshift
   repo: net-istio
   slackChannel: '#knative-serving-ci'
+  owners:
+    reviewers:
+      - dsimansk
+      - Fedosin
+      - mvinkler
+    approvers:
+      - dsimansk
+      - Fedosin
+      - mvinkler
