--- a/config/serving.yaml
+++ b/config/serving.yaml
@@ -112,3 +112,12 @@ repositories:
         cpu: 500m
         memory: 4Gi
   slackChannel: '#knative-serving-ci'
+  owners:
+    reviewers:
+      - dsimansk
+      - Fedosin
+      - mvinkler
+    approvers:
+      - dsimansk
+      - Fedosin
+      - mvinkler
