--- a/.github/workflows/go-unit-tests.yaml
+++ b/.github/workflows/go-unit-tests.yaml
@@ -15,9 +15,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Golang
-        uses: actions/setup-go@v5
-        with:
-          go-version-file: go.mod
+        uses: ./actions/setup-go
 
       - name: Run unit tests
         run: make unit-tests
