--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -30,7 +30,6 @@ config:
           enabled: true
           excludes:
           - .*ocp4.20-lp-interop.*
-        onDemand: true
         useClusterPool: true
         version: "4.19"
       - onDemand: true
@@ -53,13 +52,13 @@ config:
       - candidateRelease: true
         onDemand: true
         version: "4.20"
+        skipCron: true
       - useClusterPool: true
-        onDemand: true
         version: "4.19"
+        skipCron: true
       - onDemand: true
         version: "4.13"
-      prowgen:
-        disabled: true
+        skipCron: true
     release-1.36:
       konflux:
         enabled: true
@@ -82,12 +81,13 @@ config:
       - candidateRelease: true
         onDemand: true
         version: "4.20"
+        skipCron: true
       - useClusterPool: true
         version: "4.19"
+        skipCron: true
       - onDemand: true
         version: "4.14"
-      prowgen:
-        disabled: true
+        skipCron: true
     release-1.37:
       konflux:
         enabled: true
