Update kn plugins owners file

--- a/config/kn-plugin-event.yaml
+++ b/config/kn-plugin-event.yaml
@@ -82,6 +82,7 @@ repositories:
       - dsimansk
       - cardil
       - creydr
+      - Kaustubh-pande
       - maschmid
       - openshift-cherrypick-robot
       - rudyredhat1
