--- a/config/kn-plugin-func.yaml
+++ b/config/kn-plugin-func.yaml
@@ -96,7 +96,9 @@ repositories:
     approvers:
       - creydr
       - dsimansk
+      - Kaustubh-pande
       - lkingland
+      - maschmid
       - matejvasek
       - gauron99
       - rudyredhat1
