--- a/config/eventing-integrations.yaml
+++ b/config/eventing-integrations.yaml
@@ -136,6 +136,7 @@ repositories:
     - Cali0707
     - rudyredhat1
     - Kaustubh-pande
+    - twoGiants
     reviewers:
     - aliok
     - creydr
