--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -113,6 +113,7 @@ repositories:
     - Cali0707
     - rudyredhat1
     - Kaustubh-pande
+    - twoGiants
     reviewers:
     - aliok
     - creydr
