--- a/.github/workflows/release-generate-ci-template.yaml
+++ b/.github/workflows/release-generate-ci-template.yaml
@@ -24,6 +24,13 @@ jobs:
     name: generate-ci
     runs-on: ubuntu-latest
     steps:
+      - name: Freeup disk space
+      - run: |
+          sudo rm -rf "/usr/local/share/boost" || true
+          sudo rm -rf /usr/share/dotnet || true
+          sudo rm -rf /usr/local/lib/android || true
+          sudo rm -rf /opt/ghc || true
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY" || true
       - name: Checkout openshift-knative/hack
         uses: actions/checkout@v4
         with:
