--- a/.github/workflows/release-generate-ci.yaml
+++ b/.github/workflows/release-generate-ci.yaml
@@ -20,10 +20,6 @@ jobs:
     name: generate-ci
     runs-on: ubuntu-latest
     steps:
-      - name: Freeup disk space
-        run: |
-          sudo rm -rf "/usr/local/share/boost"
-          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
       - if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
         name: '[backstage-plugins] Clone repository'
         uses: actions/checkout@v4
@@ -128,6 +124,13 @@ jobs:
           ref: main
           repository: openshift-knative/serving
           token: ${{ secrets.SERVERLESS_QE_ROBOT }}
+      - name: Freeup disk space
+      - run: |
+          sudo rm -rf "/usr/local/share/boost" || true
+          sudo rm -rf /usr/share/dotnet || true
+          sudo rm -rf /usr/local/lib/android || true
+          sudo rm -rf /opt/ghc || true
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY" || true
       - name: Checkout openshift-knative/hack
         uses: actions/checkout@v4
         with:
