--- a/.github/workflows/release-generate-ci.yaml
+++ b/.github/workflows/release-generate-ci.yaml
@@ -125,7 +125,7 @@ jobs:
           repository: openshift-knative/serving
           token: ${{ secrets.SERVERLESS_QE_ROBOT }}
       - name: Freeup disk space
-      - run: |
+        run: |
           sudo rm -rf "/usr/local/share/boost" || true
           sudo rm -rf /usr/share/dotnet || true
           sudo rm -rf /usr/local/lib/android || true
