--- a/pkg/project/testoutput/openshift/ci-operator/knative-images/discover/Dockerfile
+++ b/pkg/project/testoutput/openshift/ci-operator/knative-images/discover/Dockerfile
@@ -1,5 +1,5 @@
 # DO NOT EDIT! Generated Dockerfile for cmd/discover.
-ARG GO_BUILDER=registry.ci.openshift.org/openshift/release:rhel-8-release-golang-1.22-openshift-4.17
+ARG GO_BUILDER=registry.ci.openshift.org/openshift/release:rhel-9-release-golang-1.22-openshift-4.17
 ARG GO_RUNTIME=registry.access.redhat.com/ubi8/ubi-minimal
 
 FROM $GO_BUILDER as builder
@@ -25,14 +25,15 @@ COPY LICENSE /licenses/
 USER 65532
 
 LABEL \
-      com.redhat.component="openshift-serverless-1-knative-discover-rhel8-container" \
-      name="openshift-serverless-1/knative-discover-rhel8" \
+      com.redhat.component="openshift-serverless-1-knative-discover-rhel9-container" \
+      name="openshift-serverless-1/knative-discover-rhel9" \
       version=$VERSION \
       summary="Red Hat OpenShift Serverless 1 Knative Discover" \
       maintainer="serverless-support@redhat.com" \
       description="Red Hat OpenShift Serverless 1 Knative Discover" \
       io.k8s.display-name="Red Hat OpenShift Serverless 1 Knative Discover" \
       io.k8s.description="Red Hat OpenShift Serverless Knative Discover" \
-      io.openshift.tags="discover"
+      io.openshift.tags="discover" \
+      cpe="cpe:/a:redhat:openshift_serverless:1.37::el9"
 
 ENTRYPOINT ["/usr/bin/discover"]
