--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -126,6 +126,37 @@ config:
       promotion: {}
       prowgen:
         disabled: true
+    release-1.38:
+      konflux:
+        enabled: true
+        excludes:
+        - .*rosa.*
+        imageOverrides:
+        - name: CLI_ARTIFACTS
+          pullSpec: registry.redhat.io/openshift4/ose-cli-artifacts-rhel9:v4.16
+        - name: GO_BUILDER
+          pullSpec: brew.registry.redhat.io/rh-osbs/openshift-golang-builder:rhel_9_golang_1.23
+        - name: GO_RUNTIME
+          pullSpec: registry.access.redhat.com/ubi9/ubi-minimal
+        - name: JAVA_BUILDER
+          pullSpec: registry.access.redhat.com/ubi9/openjdk-21
+        - name: JAVA_RUNTIME
+          pullSpec: registry.access.redhat.com/ubi9/openjdk-21-runtime
+        - name: NODE_BUILDER
+          pullSpec: registry.access.redhat.com/ubi9/nodejs-20
+        - name: NODE_RUNTIME
+          pullSpec: registry.access.redhat.com/ubi9/nodejs-20
+      openShiftVersions:
+      - candidateRelease: true
+        onDemand: true
+        version: "4.20"
+      - useClusterPool: true
+        version: "4.19"
+      - onDemand: true
+        version: "4.14"
+      promotion: {}
+      prowgen:
+        disabled: true
 repositories:
 - customConfigs:
   - name: 419-aws-ovn
