--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -118,14 +118,14 @@ config:
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
+        skipCron: true
         version: "4.20"
       - useClusterPool: true
         version: "4.19"
       - onDemand: true
+        skipCron: true
         version: "4.14"
       promotion: {}
-      prowgen:
-        disabled: true
     release-1.38:
       konflux:
         enabled: true
