--- a/pkg/project/testoutput/openshift/ci-operator/knative-images/discover/Dockerfile
+++ b/pkg/project/testoutput/openshift/ci-operator/knative-images/discover/Dockerfile
@@ -34,6 +34,8 @@ LABEL \
       io.k8s.display-name="Red Hat OpenShift Serverless 1 Knative Discover" \
       io.k8s.description="Red Hat OpenShift Serverless Knative Discover" \
       io.openshift.tags="discover" \
+      vendor="Red Hat, Inc." \
+      release=$VERSION \
       cpe="cpe:/a:redhat:openshift_serverless:1.37::el9"
 
 ENTRYPOINT ["/usr/bin/discover"]
