--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -25,13 +25,13 @@ config:
         customConfigs:
           enabled: true
           includes:
-          - .*ocp4.20-lp-interop.*
+          - .*ocp-4.21-lp-interop.*
         onDemand: true
-        version: "4.20"
+        version: "4.21"
       - customConfigs:
           enabled: true
           excludes:
-          - .*ocp4.20-lp-interop.*
+          - .*ocp-4.21-lp-interop.*
         useClusterPool: true
         version: "4.19"
       - onDemand: true
@@ -518,11 +518,11 @@ repositories:
         branch: ""
         org: ""
         repo: ""
-  - name: ocp4.20-lp-interop
+  - name: ocp-4.21-lp-interop-cr
     releaseBuildConfiguration:
       tests:
-      - as: operator-e2e-interop-aws-ocp420
-        cron: 0 23 31 2 *
+      - as: operator-e2e-interop-aws-ocp421
+        cron: 0 3,15 * * *
         steps:
           cluster_profile: aws-cspi-qe
           env:
@@ -531,17 +531,19 @@ repositories:
               {
                 "failure_rules":
                   [
-                    {"step": "knative-eventing-kafka-broker-e2e", "failure_type": "test_failure", "classification": "knative-eventing-kafka-broker-e2e Test Failure", "jira_project": "SRVCOM", "jira_additional_labels": ["!default","interop-tests"]},
-                    {"step": "knative-serving-eventing-e2e", "failure_type": "test_failure", "classification": "knative-serving-eventing-e2e Test Failure", "jira_project": "SRVCOM", "jira_additional_labels": ["!default","interop-tests"]},
-                    {"step": "operator-e2e", "failure_type": "test_failure", "classification": "operator-e2e Test Failure", "jira_project": "SRVCOM", "jira_additional_labels": ["!default","interop-tests"]},
+                    {"step": "knative-eventing-kafka-broker-e2e", "failure_type": "test_failure", "classification": "knative-eventing-kafka-broker-e2e Test Failure", "jira_additional_labels": ["!default","interop-tests"]},
+                    {"step": "knative-serving-eventing-e2e", "failure_type": "test_failure", "classification": "knative-serving-eventing-e2e Test Failure", "jira_additional_labels": ["!default","interop-tests"]},
+                    {"step": "operator-e2e", "failure_type": "test_failure", "classification": "operator-e2e Test Failure", "jira_additional_labels": ["!default","interop-tests"]},
                     {"step": "knative-*", "failure_type": "pod_failure", "classification": "knative Test Execution", "jira_additional_labels": ["!default","interop-tests"]},
                     {"step": "operator-e2e", "failure_type": "pod_failure", "classification": "operator-e2e Test Execution", "jira_additional_labels": ["!default","interop-tests"]}
                   ]
               }
-            FIREWATCH_CONFIG_FILE_PATH: https://raw.githubusercontent.com/CSPI-QE/cspi-utils/main/firewatch-base-configs/aws-ipi/lp-interop.json
-            FIREWATCH_DEFAULT_JIRA_ADDITIONAL_LABELS: '["4.20-lp","self-managed-lp","serverless-lp"]'
+            FIREWATCH_DEFAULT_JIRA_ADDITIONAL_LABELS: '["4.21-lp","self-managed-lp","serverless-lp"]'
             FIREWATCH_DEFAULT_JIRA_ASSIGNEE: maschmid@redhat.com
-            FIREWATCH_DEFAULT_JIRA_PROJECT: LPINTEROP
+            FIREWATCH_DEFAULT_JIRA_PROJECT: SRVCOM
+            OCP_VERSION: "4.21"
+            REPORT_TO_DR: "true"
+            REPORTPORTAL_CMP: Serverless-lp-interop
             USER_TAGS: |
               scenario serverless
           test:
@@ -575,69 +577,8 @@ repositories:
               requests:
                 cpu: 100m
                 memory: 200Mi
-          workflow: firewatch-ipi-aws
+          workflow: firewatch-ipi-aws-cr
         timeout: 8h0m0s
-      - as: operator-e2e-interop-aws-ocp420-fips
-        cron: 0 23 31 2 *
-        steps:
-          cluster_profile: aws-cspi-qe
-          env:
-            BASE_DOMAIN: cspilp.interop.ccitredhat.com
-            FIPS_ENABLED: "true"
-            FIREWATCH_CONFIG: |
-              {
-                "failure_rules":
-                  [
-                    {"step": "knative-eventing-kafka-broker-e2e", "failure_type": "test_failure", "classification": "knative-eventing-kafka-broker-e2e Test Failure", "jira_project": "SRVCOM", "jira_additional_labels": ["!default","interop-tests"]},
-                    {"step": "knative-serving-eventing-e2e", "failure_type": "test_failure", "classification": "knative-serving-eventing-e2e Test Failure", "jira_project": "SRVCOM", "jira_additional_labels": ["!default","interop-tests"]},
-                    {"step": "operator-e2e", "failure_type": "test_failure", "classification": "operator-e2e Test Failure", "jira_project": "SRVCOM", "jira_additional_labels": ["!default","interop-tests"]},
-                    {"step": "knative-*", "failure_type": "pod_failure", "classification": "knative Test Execution", "jira_additional_labels": ["!default","interop-tests"]},
-                    {"step": "operator-e2e", "failure_type": "pod_failure", "classification": "operator-e2e Test Execution", "jira_additional_labels": ["!default","interop-tests"]}
-                  ]
-              }
-            FIREWATCH_CONFIG_FILE_PATH: https://raw.githubusercontent.com/CSPI-QE/cspi-utils/main/firewatch-base-configs/aws-ipi/lp-interop.json
-            FIREWATCH_DEFAULT_JIRA_ADDITIONAL_LABELS: '["4.20-lp","self-managed-lp","serverless-lp","fips"]'
-            FIREWATCH_DEFAULT_JIRA_ASSIGNEE: maschmid@redhat.com
-            FIREWATCH_DEFAULT_JIRA_PROJECT: LPINTEROP
-            USER_TAGS: |
-              scenario serverless
-          test:
-          - as: operator-e2e
-            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin SKIP_MESH_AUTH_POLICY_GENERATION=true
-              make test-e2e-with-kafka
-            from: serverless-source-image
-            resources:
-              limits:
-                memory: 8Gi
-              requests:
-                cpu: 100m
-                memory: 200Mi
-          - as: knative-serving-eventing-e2e
-            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin SKIP_MESH_AUTH_POLICY_GENERATION=true
-              make test-upstream-e2e-no-upgrade
-            from: serverless-source-image
-            resources:
-              limits:
-                memory: 8Gi
-              requests:
-                cpu: 100m
-                memory: 200Mi
-          - as: knative-eventing-kafka-broker-e2e
-            commands: GOPATH=/tmp/go PATH=$PATH:/tmp/go/bin SKIP_MESH_AUTH_POLICY_GENERATION=true
-              make test-upstream-e2e-kafka-no-upgrade
-            from: serverless-source-image
-            resources:
-              limits:
-                memory: 10Gi
-              requests:
-                cpu: 100m
-                memory: 200Mi
-          workflow: firewatch-ipi-aws
-        timeout: 8h0m0s
-      zz_generated_metadata:
-        branch: ""
-        org: ""
-        repo: ""
   dockerfiles:
     matches:
     - knative-operator/.*
